# SpecFit

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  retrieve_data.py  setup.py
.github/workflows/: run_pytest.yml
SpecFit/: SpecFit.py  __init__.py
SpecFit/data/: retrieve.py
SpecFit/models/: constants.hpp  freeFree.cpp  freeFree.hpp  gaussian.cpp  gaussian.hpp  lorentzian.cpp  lorentzian.hpp  planck.cpp  planck.hpp  pybind.cpp  wrappers.py
SpecFit/physics/: constants.py  free_free.py  planck.py
SpecFit/plotting/: plot.py  plot_setup.py
SpecFit/util/: default_params.py  io.py  physics.py
examples/: example1.py  example1_simple.py  example2_detailed.py
tests/: conftest.py  plot_fixtures.py
tests/fitting/: conftest.py  test_fitting.py  test_loading.py  test_params.py
tests/models/: conftest.py  test_free_free.py  test_gaussian.py  test_lorentzian.py  test_planck.py
tests/physics/: test_free_free.py  test_planck.py
