[build-system]
requires = [
    "setuptools",
    "pybind11>=2.10.0"
]
build-backend = "setuptools.build_meta"


[project]
name = "SpecFit"
version = "0.0.1"
authors = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"},
]
maintainers = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"}
]
description = "Spectrum fitter using lmfit."
license = {file = "LICENSE"}
readme = "README.md"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "scipy >= 1.3.0, <= 1.12.0",
    "lmfit"
]

[project.urls]
Repository = "https://github.com/anthonyburrow/SpecFit.git"
